fix: truncation

--- a/src/assets/styles/pages/books.css
+++ b/src/assets/styles/pages/books.css
@@ -44,10 +44,6 @@
     }
 
     & .description {
-      -webkit-box-orient: vertical;
-      display: -webkit-box;
-      -webkit-line-clamp: 6;
-      overflow: hidden;
       margin-bottom: var(--sizing-base);
     }
   }
